Fixed header icon alignment

--- a/src/PathfindingVisualizer/Node/Node.css
+++ b/src/PathfindingVisualizer/Node/Node.css
@@ -15,8 +15,8 @@
   display: block !important;
 }
 .node-header{
-  width: 1.5rem !important;
-  height: 1.5rem !important;
+  width: 1.3rem !important;
+  height: 1.3rem !important;
   align-items: bottom !important;
 }
 .node-finish {
